alb_security_group.tf
resource "aws_security_group" "alb_sg" {

  name = "alb-security-group"

  description = "Allow HTTP from Internet"

  vpc_id = aws_vpc.main.id

  ingress {

    from_port = 80
    to_port   = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {

    from_port = 0
    to_port   = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {

    Name = "alb-security-group"

  }

}
